tests/invalid/invalid-029.inox
Module Invalid

Main() :
    until True
;
